# blimp_snn

./: .gitignore  README.md
misc/motor_control/: dcmotors.cpp  dcmotors.hpp  mycpplib.cpp  mycpplibZero.cpp  servo_old.cpp  servo_ros.py  servofancy.py  servomotor.py  servopigpio.py  servoros.py  servotest  test
misc/motor_control_old/: CMakeLists.txt  package.xml
misc/motor_control_old/include/: dcmotor.hpp
misc/motor_control_old/launch/: motor_control.launch
misc/motor_control_old/src/: dcmotor.cpp  keyboard_control.cpp  servo_ros.py
misc/others/: code.py
misc/others/stepper_motor_down/: CMakeLists.txt  README.md
misc/others/stepper_motor_down/include/: StepperMotor.hpp
misc/others/stepper_motor_down/src/: StepperMotor.cpp
misc/others/stepper_motor_down/test/: Test_1.cpp  Test_2.cpp  Test_3.cpp
read_me/radar_wp/: README.md
read_me/ros_cheat_sheet/: README.md
read_me/ros_multiple_machines/: README.md
read_me/rpi_ssh_connection/: README.md
ros_radar_mine/: myLayout_All.xml  myLayout_playAll.xml
ros_radar_mine/catkin_ws/: comp_ros_env.sh  launch.sh  pi_ros_env.sh
ros_radar_mine/catkin_ws/src/mocap_optitrack/: CMakeLists.txt
ros_radar_mine/catkin_ws/src/mocap_optitrack/config/: mocap.yaml
ros_radar_mine/catkin_ws/src/mocap_optitrack/launch/: mocap.launch  mocap_advanced.launch  mocap_report.launch
ros_radar_mine/catkin_ws/src/mocap_optitrack/src/: CMakeLists.txt  pose_stamper_1.cpp
ros_radar_mine/catkin_ws/src/motor_control/: CMakeLists.txt  package.xml
ros_radar_mine/catkin_ws/src/motor_control/include/: dcmotor.hpp
ros_radar_mine/catkin_ws/src/motor_control/launch/: motor_control.launch
ros_radar_mine/catkin_ws/src/motor_control/launch/misc/: controller.launch  optitrack.launch  plotjuggler.launch  radar.launch  record.launch
ros_radar_mine/catkin_ws/src/motor_control/msg/: MotorCommand.msg
ros_radar_mine/catkin_ws/src/motor_control/src/: ann_automate.py  connection.py  controller.py  datasets.py  dcmotor.cpp  href_set.py  keyboard_control.cpp  keyboard_control_simple.cpp  myPID.py  network.py  neuron.py  servo_ros.py  snn_automate.py  snn_fed.py
ros_radar_mine/radar_filters/: bag_proc_blimp.py  bag_processing.py  bag_processing_individual.py  blimp_processing.py  radar_filters.py  test.py  (+2 more)
setup/: cmake_installation.sh  install_basics.sh  opencv_installation.sh  radar_mine_install.sh  radar_position2go_install.sh  ros_kinetic_install.sh  wpa_supplicant.conf
(+49 files in other folders)
