<?xml version="1.0"?>
<package format="2">
  <name>motor_control_old</name>
  <version>0.0.0</version>
  <description>The motor_control_old package</description>
  <maintainer email="marinaovd96@gmail.com">pi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend> 
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend> 
</package>
