<?xml version="1.0"?>
<package format="2">
  <name>motor_control</name>
  <version>0.0.0</version>
  <description>The motor_control package</description>
  <maintainer email="marinaovd96@gmail.com">pi</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <exec_depend>roscpp</exec_depend> 
  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend> 
  <build_depend>message_generation</build_depend>
  <export>message_runtime</export> 
  <exec_depend>message_runtime</exec_depend> 
</package>
